# ai-tutor-membrain

./: .gitignore  pyproject.toml  render.yaml  requirements.txt  vercel-build.sh  vercel.json
backend/: agent.py  auth.py  config.py  logic.py  main.py  mcp_bridge.py  mcp_client.py  models.py  note_processor.py  requirements.txt  supabase_client.py  tool_executor.py
frontend/: app.py  knowledge_graph.html  membrain_graph.html  requirements.txt
