[build-system]
requires = ["setuptools>=61.0", "wheel"]

[project]
name = "ai-tutor-frontend"
version = "1.0.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    "streamlit==1.28.0",
    "requests==2.32.5",
    "python-dotenv==1.2.2",
    "networkx==3.1",
    "pyvis==0.3.2",
    "pandas==2.1.3",
    "plotly==5.18.0",
    "numpy==1.26.3"
]